--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -242,6 +242,7 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -275,7 +276,6 @@ allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
-allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -932,6 +932,7 @@ allow 23.137.254.137;
 allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1001,6 +1002,7 @@ allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:10:bb36::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1316,6 +1318,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1564,6 +1567,7 @@ allow 2a0e:d604:1:151::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:ca80::1260:4bff:fea4:19b0;
+allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1704,6 +1708,7 @@ allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
+allow 45.134.225.36;
 allow 45.135.180.12;
 allow 45.137.70.158;
 allow 45.138.16.107;
