--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -2,6 +2,7 @@ deny 101.99.76.22;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
+deny 102.211.56.105;
 deny 102.211.56.12;
 deny 102.211.56.200;
 deny 103.109.101.105;
@@ -187,6 +188,7 @@ deny 172.105.20.12;
 deny 172.232.209.254;
 deny 172.233.82.41;
 deny 172.234.228.174;
+deny 172.81.131.139;
 deny 172.81.131.156;
 deny 172.81.132.94;
 deny 173.0.3.111;
@@ -1589,6 +1591,54 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:10::19eb:717b;
+deny 2a10:1fc0:10::28fc:90d4;
+deny 2a10:1fc0:10::2a17:5b54;
+deny 2a10:1fc0:10::2cf4:6ba2;
+deny 2a10:1fc0:10::2d91:1a2d;
+deny 2a10:1fc0:10::3903:457;
+deny 2a10:1fc0:10::3919:de17;
+deny 2a10:1fc0:10::3a1:5e9f;
+deny 2a10:1fc0:10::3dc5:e694;
+deny 2a10:1fc0:10::3eb3:d1d0;
+deny 2a10:1fc0:10::3ec1:2b1e;
+deny 2a10:1fc0:10::40d8:83c;
+deny 2a10:1fc0:10::42d2:f78b;
+deny 2a10:1fc0:10::5138:4dfa;
+deny 2a10:1fc0:10::5719:261d;
+deny 2a10:1fc0:10::61d9:7617;
+deny 2a10:1fc0:10::61e2:c84d;
+deny 2a10:1fc0:10::627f:3c31;
+deny 2a10:1fc0:10::694a:c359;
+deny 2a10:1fc0:10::6b4c:30fc;
+deny 2a10:1fc0:10::6c2e:469a;
+deny 2a10:1fc0:10::6d92:d6ab;
+deny 2a10:1fc0:10::6fde:4b8d;
+deny 2a10:1fc0:10::792f:38b4;
+deny 2a10:1fc0:10::895d:abf9;
+deny 2a10:1fc0:10::8a03:d023;
+deny 2a10:1fc0:10::8b78:d42e;
+deny 2a10:1fc0:10::8d4d:eca2;
+deny 2a10:1fc0:10::9a73:d4f2;
+deny 2a10:1fc0:10::9d80:c9f7;
+deny 2a10:1fc0:10::9e08:e765;
+deny 2a10:1fc0:10::a3a5:49da;
+deny 2a10:1fc0:10::a458:8b37;
+deny 2a10:1fc0:10::a63c:724c;
+deny 2a10:1fc0:10::b571:1205;
+deny 2a10:1fc0:10::bf3f:d195;
+deny 2a10:1fc0:10::c129:61a1;
+deny 2a10:1fc0:10::c385:c7fa;
+deny 2a10:1fc0:10::c7c7:2f84;
+deny 2a10:1fc0:10::d5a6:a292;
+deny 2a10:1fc0:10::d5d0:db30;
+deny 2a10:1fc0:10::d6b7:b3e9;
+deny 2a10:1fc0:10::dbe0:6173;
+deny 2a10:1fc0:10::dbe9:7852;
+deny 2a10:1fc0:10::e4c8:9020;
+deny 2a10:1fc0:10::ea87:5496;
+deny 2a10:1fc0:10::fa6c:cac5;
+deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1816,10 +1866,12 @@ deny 46.165.243.36;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
+deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 46.38.243.210;
 deny 50.7.40.39;
+deny 5.101.82.22;
 deny 5.101.82.67;
 deny 5.104.84.183;
 deny 5.104.86.6;
@@ -1863,6 +1915,7 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.220.107;
 deny 57.129.91.235;
+deny 5.8.18.30;
 deny 5.8.18.46;
 deny 5.8.18.99;
 deny 62.171.137.169;
@@ -1921,6 +1974,30 @@ deny 84.239.46.144;
 deny 84.38.130.33;
 deny 84.38.130.50;
 deny 85.239.41.130;
+deny 85.239.55.11;
+deny 85.239.55.110;
+deny 85.239.55.112;
+deny 85.239.55.114;
+deny 85.239.55.123;
+deny 85.239.55.132;
+deny 85.239.55.168;
+deny 85.239.55.173;
+deny 85.239.55.174;
+deny 85.239.55.184;
+deny 85.239.55.189;
+deny 85.239.55.192;
+deny 85.239.55.201;
+deny 85.239.55.228;
+deny 85.239.55.230;
+deny 85.239.55.239;
+deny 85.239.55.24;
+deny 85.239.55.249;
+deny 85.239.55.25;
+deny 85.239.55.250;
+deny 85.239.55.31;
+deny 85.239.55.37;
+deny 85.239.55.51;
+deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1965,6 +2042,30 @@ deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.219.237.39;
+deny 91.227.77.107;
+deny 91.227.77.108;
+deny 91.227.77.119;
+deny 91.227.77.125;
+deny 91.227.77.139;
+deny 91.227.77.158;
+deny 91.227.77.160;
+deny 91.227.77.181;
+deny 91.227.77.193;
+deny 91.227.77.200;
+deny 91.227.77.208;
+deny 91.227.77.209;
+deny 91.227.77.226;
+deny 91.227.77.229;
+deny 91.227.77.237;
+deny 91.227.77.25;
+deny 91.227.77.31;
+deny 91.227.77.36;
+deny 91.227.77.44;
+deny 91.227.77.48;
+deny 91.227.77.51;
+deny 91.227.77.54;
+deny 91.227.77.62;
+deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
