--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -23,6 +23,7 @@ set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
+set_real_ip_from 104.244.74.229;
 set_real_ip_from 104.244.74.23;
 set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.140;
@@ -243,6 +244,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
