Update lists at 20250624-2101

--- a/deny-tor_ips_v4.conf
+++ b/deny-tor_ips_v4.conf
@@ -1137,6 +1137,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
