--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -961,6 +961,7 @@ allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
 allow 23.236.122.193;
+allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8902::f03c:95ff:fe1e:6065;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -1931,6 +1932,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
