--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -1137,6 +1137,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
