--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -961,6 +961,7 @@ deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
 deny 23.236.122.193;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8902::f03c:95ff:fe1e:6065;
 deny 2400:8905::f03c:95ff:fe67:ec03;
@@ -1931,6 +1932,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
