--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -105,6 +105,7 @@ deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
+deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8902::f03c:95ff:fe1e:6065;
 deny 2400:8905::f03c:95ff:fe67:ec03;
