--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,6 +107,7 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -240,7 +241,6 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -476,7 +476,6 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
-allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
@@ -581,6 +580,7 @@ allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
+allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -746,6 +746,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -917,6 +918,7 @@ allow 23.129.64.152;
 allow 23.129.64.153;
 allow 23.137.253.254;
 allow 23.137.253.27;
+allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.13;
@@ -987,6 +989,7 @@ allow 2602:f6f6:2:cd1f::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
+allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
@@ -1275,6 +1278,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1285,7 +1289,6 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1300,7 +1303,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1564,6 +1566,7 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1640,7 +1643,6 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
-allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.220.75.237;
@@ -1808,6 +1810,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
