Update lists at 20250627-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,6 +107,7 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -297,9 +298,6 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
-allow 185.220.101.0;
-allow 185.220.101.1;
-allow 185.220.101.10;
 allow 185.220.101.100;
 allow 185.220.101.101;
 allow 185.220.101.102;
@@ -310,12 +308,9 @@ allow 185.220.101.106;
 allow 185.220.101.107;
 allow 185.220.101.108;
 allow 185.220.101.109;
-allow 185.220.101.11;
 allow 185.220.101.110;
-allow 185.220.101.12;
 allow 185.220.101.128;
 allow 185.220.101.129;
-allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
 allow 185.220.101.132;
@@ -326,7 +321,6 @@ allow 185.220.101.136;
 allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
-allow 185.220.101.14;
 allow 185.220.101.140;
 allow 185.220.101.141;
 allow 185.220.101.142;
@@ -337,7 +331,6 @@ allow 185.220.101.146;
 allow 185.220.101.147;
 allow 185.220.101.148;
 allow 185.220.101.149;
-allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
 allow 185.220.101.152;
@@ -348,7 +341,6 @@ allow 185.220.101.156;
 allow 185.220.101.157;
 allow 185.220.101.158;
 allow 185.220.101.159;
-allow 185.220.101.16;
 allow 185.220.101.160;
 allow 185.220.101.161;
 allow 185.220.101.162;
@@ -359,7 +351,6 @@ allow 185.220.101.166;
 allow 185.220.101.167;
 allow 185.220.101.168;
 allow 185.220.101.169;
-allow 185.220.101.17;
 allow 185.220.101.170;
 allow 185.220.101.171;
 allow 185.220.101.172;
@@ -370,7 +361,6 @@ allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
-allow 185.220.101.18;
 allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
@@ -381,23 +371,8 @@ allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
-allow 185.220.101.19;
 allow 185.220.101.190;
 allow 185.220.101.191;
-allow 185.220.101.2;
-allow 185.220.101.20;
-allow 185.220.101.21;
-allow 185.220.101.22;
-allow 185.220.101.23;
-allow 185.220.101.24;
-allow 185.220.101.25;
-allow 185.220.101.26;
-allow 185.220.101.27;
-allow 185.220.101.28;
-allow 185.220.101.29;
-allow 185.220.101.3;
-allow 185.220.101.30;
-allow 185.220.101.31;
 allow 185.220.101.32;
 allow 185.220.101.33;
 allow 185.220.101.34;
@@ -406,7 +381,6 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
-allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -417,7 +391,6 @@ allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
-allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -428,14 +401,10 @@ allow 185.220.101.56;
 allow 185.220.101.57;
 allow 185.220.101.58;
 allow 185.220.101.59;
-allow 185.220.101.6;
 allow 185.220.101.60;
 allow 185.220.101.61;
 allow 185.220.101.62;
 allow 185.220.101.63;
-allow 185.220.101.7;
-allow 185.220.101.8;
-allow 185.220.101.9;
 allow 185.220.101.96;
 allow 185.220.101.97;
 allow 185.220.101.98;
@@ -448,6 +417,7 @@ allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
+allow 185.241.208.185;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
@@ -455,6 +425,7 @@ allow 185.241.208.24;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
+allow 185.241.208.82;
 allow 185.241.208.92;
 allow 185.244.192.175;
 allow 185.244.192.184;
@@ -598,6 +569,7 @@ allow 194.87.55.98;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
+allow 195.47.238.177;
 allow 195.47.238.44;
 allow 195.47.238.82;
 allow 195.47.238.83;
@@ -612,7 +584,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.216;
+allow 198.167.206.169;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -741,6 +713,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1326,10 +1299,6 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
-allow 2a0b:f4c2::;
-allow 2a0b:f4c2::1;
-allow 2a0b:f4c2::10;
-allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
@@ -1392,19 +1361,6 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
-allow 2a0b:f4c2::12;
-allow 2a0b:f4c2::13;
-allow 2a0b:f4c2::14;
-allow 2a0b:f4c2::15;
-allow 2a0b:f4c2::16;
-allow 2a0b:f4c2::17;
-allow 2a0b:f4c2::18;
-allow 2a0b:f4c2::19;
-allow 2a0b:f4c2::2;
-allow 2a0b:f4c2::20;
-allow 2a0b:f4c2::21;
-allow 2a0b:f4c2::22;
-allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -1413,7 +1369,6 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
-allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -1424,7 +1379,6 @@ allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
-allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -1435,18 +1389,10 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
-allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
-allow 2a0b:f4c2::27;
-allow 2a0b:f4c2::28;
-allow 2a0b:f4c2::29;
-allow 2a0b:f4c2::3;
-allow 2a0b:f4c2::30;
-allow 2a0b:f4c2::31;
-allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -1462,11 +1408,6 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
-allow 2a0b:f4c2::5;
-allow 2a0b:f4c2::6;
-allow 2a0b:f4c2::7;
-allow 2a0b:f4c2::8;
-allow 2a0b:f4c2::9;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -1478,6 +1419,7 @@ allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
+allow 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -1581,11 +1523,13 @@ allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:1:1:2:58:56:93;
 allow 2a12:a800:2:1:185:241:208:115;
+allow 2a12:a800:2:1:185:241:208:185;
 allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
+allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
@@ -1876,7 +1820,6 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
-allow 82.29.128.145;
 allow 82.29.153.76;
 allow 83.147.17.190;
 allow 83.217.9.73;
@@ -1927,7 +1870,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
