Update lists at 20250628-0601

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -107,6 +107,7 @@ deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.172.205.8;
 deny 114.35.245.150;
+deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
 deny 118.194.234.240;
@@ -717,6 +718,7 @@ deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:545c::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1287,7 +1289,6 @@ deny 2a07:e042:1:182::1;
 deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
-deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:f4c0:16c:10::1;
@@ -1881,7 +1882,6 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
